--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100&display=swap");
 @keyframes animacion {
   0% {
     background-position: 5% 0%; }
@@ -13,10 +14,8 @@
   padding: 0;
   box-sizing: border-box; }
 
-.body {
-  width: 100%;
-  height: auto;
-  background-color: #e38686; }
+a {
+  text-decoration: none; }
 
 header {
   background: linear-gradient(90deg, #d9694d 35%, white 49%, #d9cb2e 83%);
@@ -38,14 +37,6 @@ header {
   flex-direction: column;
   justify-content: space-between; }
 
-nav {
-  /*background: linear-gradient(90deg, rgba(217,105,77,1) 35%, rgba(255,255,255,1) 49%, rgb(223, 121, 54) 83%);
-    animation-name: animacion;
-	animation-iteration-count: infinite;
-	animation-duration: 12s;
-	animation-delay: 0s;
-	background-size: 500% 500%;*/ }
-
 .nombre {
   margin-top: 10px;
   margin-left: 20px;
@@ -53,26 +44,59 @@ nav {
   height: auto;
   color: #4e484a; }
 
-.section {
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
-  margin-top: 10px;
+.imagenNosotros {
+  width: auto;
+  height: auto;
+  margin-top: 15px;
+  margin-left: 400px;
+  border-left: 4px solid #959728; }
+
+.sectionNosotros {
   width: 100%;
   height: auto;
-  background-color: #ead591; }
+  padding: 10px;
+  margin: 10px 0px 20px 0px; }
 
-#contenedor__carousel {
-  width: 500px;
+.section__nosotros--div {
+  text-align: center; }
+
+.contenedorformulario {
+  padding: 10px; }
+
+.formularios {
+  padding: 40px;
+  gap: 20px; }
+
+.mapa {
+  width: 1200PX;
+  margin-left: 200px; }
+
+.submit {
+  color: white;
+  background-color: #851640; }
+
+.submit:hover {
+  color: black;
+  background-color: #c42245; }
+
+fieldset {
+  padding: 5px;
+  margin: 5px; }
+
+input {
+  background-color: #eedb5f; }
+
+iframe {
+  padding: 10px;
+  width: 100%; }
+
+iframe:hover {
+  border: 1.5px solid #ebdfdf; }
+
+.body {
+  width: 100%;
   height: auto;
-  margin-top: 50px;
-  margin-left: 600px; }
-
-#contenedor__carousel:hover {
-  border: solid 1.5px #d1ad35; }
-
-a {
-  text-decoration: none; }
+  background-color: #e38686; }
 
 .container {
   margin-top: 200px;
@@ -85,6 +109,8 @@ a {
   grid-template-areas: "img1 img1 img2 img2 img3 img3 publicidad publicidad" "img4 img4 img5 img5 img6 img6 publicidad publicidad" "img7 img7 img8 img8 img9 img9 publicidad publicidad" "proximamente proximamente proximamente proximamente proximamente proximamente publicidad publicidad"; }
 
 img {
+  margin: 4px;
+  border: solid 2px #b27474;
   width: auto;
   height: auto; }
 
@@ -175,100 +201,14 @@ img {
   background-color: darkorange;
   grid-area: publicidad; }
 
+/*.publicidad__despegar{
+
+}*/
 .proximamente {
   display: flex;
   flex-direction: row;
   background-color: darkorange;
   grid-area: proximamente; }
-
-.nacionales {
-  width: 800px;
-  height: 170px;
-  padding: 10px;
-  margin-left: 25px;
-  background-color: #c06464; }
-
-img {
-  margin: 4px;
-  border: solid 2px #b27474; }
-
-.imagenNosotros {
-  width: auto;
-  height: auto;
-  margin-top: 15px;
-  margin-left: 400px;
-  border-left: 4px solid #959728; }
-
-.sectionNosotros {
-  width: 100%;
-  height: auto;
-  padding: 10px;
-  margin: 10px 0px 20px 0px; }
-
-.section__nosotros--div {
-  text-align: center; }
-
-.section__galeria {
-  width: 100%;
-  height: auto;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-areas: "video1" "video2" "footer"; }
-
-#footer__galeria {
-  margin-top: 600px; }
-
-.video1 {
-  grid-area: video1; }
-
-.video2 {
-  grid-area: video2; }
-
-.footer {
-  grid-area: footer; }
-
-.section__footer {
-  margin-top: 300px; }
-
-.contenedorformulario {
-  padding: 10px; }
-
-.formularios {
-  padding: 40px;
-  gap: 20px; }
-
-.mapa {
-  width: 1200PX;
-  margin-left: 200px; }
-
-.submit {
-  color: white;
-  background-color: #851640; }
-
-.submit:hover {
-  color: black;
-  background-color: #c42245; }
-
-fieldset {
-  padding: 5px;
-  margin: 5px; }
-
-input {
-  background-color: #eedb5f; }
-
-.multimedia {
-  padding: 10px;
-  width: 100%;
-  height: 200px;
-  background-color: #ba7575; }
-
-iframe {
-  padding: 10px;
-  width: 100%; }
-
-iframe:hover {
-  border: 1.5px solid #ebdfdf; }
 
 footer {
   display: flex;
@@ -318,3 +258,6 @@ footer {
 
 .whatsapp:hover {
   border: solid 2px #009c0d; }
+
+.section__footer {
+  margin-top: 300px; }
